--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "jwt-decode": "^3.1.2",
     "keen-slider": "^6.8.6",
     "lodash.debounce": "^4.0.8",
-    "next": "13.1.3",
+    "next": "^13.5.5-canary.15",
     "next-build-id": "^3.0.0",
     "next-i18next": "^14.0.3",
     "next-seo": "^6.1.0",
